--- a/index.html
+++ b/index.html
@@ -1,21 +1,59 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
- </head>
- <body>
-    <h1>Barnabas's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>My Resume</title>
+</head>
+<body>
+    <h1>Barnabas's Resume</h1>
     <hr>
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <a href="./public/movie-ranking.html"><img class="fit-picture" src="./assets/images/movie-ranking.png" height="200" alt="movie-list"></a>
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <a href="./public/birthday-invite.html"><img class="fit-picture" src="./assets/images/birthday-invite.png" height="200" alt="birthday cake"></a>
-    <a href="./public/contact.html">
-        <hr>Contact me</a> 
-        <a href="./public/about.html">About</a>
- </body>
- </html>
+    <h2>SUMMARY</h2>
+    <p>Detail-oriented and highly motivated Geospatial Analyst with a B.Sc. in Geology and hands-on experience in geospatial data analysis, spatial visualization, and educational leadership.</p>
+    <hr>
+    <h2>EDUCATION</h2>
+    <p><b>University of Benin</b>, Nigeria <br>Bachelor of Science (B.Sc.) in Geology | Second Class Lower<br>
+    Graduated: 2023</p>
+    <hr>
+    <h2>WORK EXPERIENCE</h2>
+    <p><b>Growth Intern</b><br>Evolve Credit | Remote | June 2023 - Sept 2023
+    <ul>
+        <li>Conducted market research and data analysis to support customer acquisition strategies.</li>
+        <li>Used Excel and data tools to monitor campaign KPIs and visualize trends.</li>
+        <li>Participated in team meetings focused on digital product growth and engagement metrics.</li>
+    </ul>
+    </p>
+    <p><b>NYSC - Educator</b><br>D.P.P.S High School, Delta State | Jan 2024 - Oct 2024
+    <ul>
+        <li>Taught and mentored 100+ senior secondary students in sciences, improving academic performance.</li>
+        <li>Led classroom planning and organized subject-based projects using digital resources.</li>
+        <li>Promoted data collection and analysis for academic assessments, encouraging a tech-driven learning environment.</li>
+    </ul>
+    </p>
+    <hr>
+    <h2>SKILLS</h2>
+    <ol>
+        <li>Tools ; Microsoft Office Suite, Canva, Tableau (basic)</li>
+        <li>Visualization: Dashboards, StoryMaps, charts, thematic maps</li>
+        <li>Data Analysis: Microsoft Excel, spatial modeling, geostatistics</li>
+        <li>Programming: Python (basic proficiency)</li>
+        <li>GIS Platforms: QGIS, Google Earth, ArcGIS (basic knowledge)</li>
+    </ol>
+    <hr>
+    <h2>CERTIFICATIONS</h2>
+    <p>
+        <ul>
+            <li>Python for Data Science (Udemy) - In Progress</li>
+            <li>GIS Fundamentals (ESRI / YouTube Learning)</li>
+        </ul>
+    </p><br>
+    <img src="https://i.postimg.cc/CxqVFB93/Screenshot-12.png" alt="Barnabas Omoluyi" width="200" height="200" />
+    <p><a href="./hobbies.html">Hobbies</a>
+    <a href="./contact.html">Contact</a>
+    </p>
+    <footer>
+        <p>© 2025 Barnabas Omoluyi</p>
+    </footer>
 
+
+</body>
+</html>
